Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.1
-
None
-
-
f00513835 (12.0)
Description
Summary
When CMake Presets are reloaded, changes in Display Name are not respected
Expected Behaviour
If a CMake Preset is edited, the `displayName` value is changed and the CMake Presets are reloaded from `Build->Reload CMake Presets`, the change in display name should be reflected in the UI
Actual Behaviour
The display name does not update in the UI
Steps to Reproduce
1. Load the attached project. A single CMake Preset appears in the UI
2. Edit the preset in the CMakePresets.json file and change the display name
3. Select Build->Reload CMake Presets from the menu
The change in the display name is not updated in the UI
Attachments
For Gerrit Dashboard: QTCREATORBUG-30237 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
535212,2 | CMakePM: Allow preset name changing for Reload CMake Presets | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |