CMakePM: Allow preset name changing for Reload CMake Presets

Fixes: QTCREATORBUG-30237
Change-Id: I9d2f90d9637b91845dfe0ab619c83ff60dbd986a
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>